# shdp-py

./: .coveragerc  .gitignore  build.bat  cert.pem  clear.ps1  key.pem  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.bat  setup.cfg  setup.py  temp.pfx  tox.ini
.github/workflows/: shdp.yml
docs/shdp/: index.html  index.md  lib.html  lib.md
docs/shdp/client/: index.html  index.md  quic.html  quic.md  tls.html  tls.md  ws.html  wss.html
docs/shdp/protocol/: args.html  args.md  errors.html  errors.md  index.html  index.md  versions.html  versions.md
docs/shdp/server/: index.html  index.md  quic.html  quic.md  tls.html  tls.md  ws.html  wss.html
docs/shdp/tests/: conftest.html  index.html  test_0x0000.html  test_0x0001.html  test_0x0002.html  test_0x0003.html  test_0x0004.html  test_0x0005.html  test_0x0006.html  test_client_full_front_interaction.html  test_component_full_back_track.html  test_interaction_full_back_track.html  test_tls_client_connect.html  test_tls_server_opening.html  test_ws_client_connect.html  test_ws_client_errors.html  test_ws_server_errors.html  test_ws_server_opening.html  test_wss_client_connect.html  test_wss_client_errors.html  test_wss_server_errors.html  test_wss_server_opening.html
docs/shdp/utils/: bitvec.html  bitvec.md  index.html  index.md  result.html  result.md
shdp/protocol/: args.py
shdp/tests/: test_0x0001.py  test_client_full_front_interaction.py  test_ws_client_connect.py  test_ws_server_errors.py  test_ws_server_opening.py
shdp/tests/files/: blog.html  profile.html  test.html  (+1 more)
shdp/utils/: bitvec.py
(+78 files in other folders)
